--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'java'
+    id 'application'
 }
+
 
 group 'com.ball.of.mud'
 version '1.0-SNAPSHOT'
@@ -13,4 +15,8 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+application {
+    mainClassName = 'com.ball.of.mud.Main'
 }
